--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "@babel/core": "^7.24.0",
         "@babel/preset-env": "^7.24.0",
         "babel-jest": "^29.7.0",
+        "babel-loader": "^9.1.3",
         "css-loader": "^6.9.1",
         "eslint": "^8.56.0",
         "eslint-config-airbnb-base": "^15.0.0",
